Fix images stretched vertically

--- a/website/static/css/website.css
+++ b/website/static/css/website.css
@@ -637,3 +637,8 @@ html {
 }
 
 /* * {outline: 1px solid red}; */
+
+/** Wagtail overrides **/
+.block-image > img {
+  height: auto;
+}
